--- a/nlp.html
+++ b/nlp.html
@@ -111,11 +111,11 @@
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/medallia/7c7e6f2c-85ce-4c7b-8e65-d777f1df5532'>Medallia - Research Scientist - Machine Learning, AI & NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/7c7e6f2c-85ce-4c7b-8e65-d777f1df5532'>Medallia - Research Scientist - Machine Learning, AI & NLP</a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 7, 2019 ... The Software Engineer will use machine learning to generate simulated content 
 on various websites and social media platforms that will then be used for?...</p>
@@ -212,7 +212,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/777d7217-3ff0-4aae-959a-0d076a57f665'>HomeX - NLP Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/777d7217-3ff0-4aae-959a-0d076a57f665'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
@@ -315,7 +315,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://olxbrasil.recruiterbox.com/jobs/fk033gc/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://olxbrasil.recruiterbox.com/jobs/fk033gc/'>
     Cientista de Dados (NLP) at OLX Brasil
 </a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
@@ -338,7 +338,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -382,7 +382,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <hr/>
-<h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
@@ -396,7 +396,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Aug 12, 2019 ... Apply online for the job of Senior NLP Engineer at Amplexor.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
@@ -404,7 +404,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">London London, United Kingdom  London</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rasa/jobs/4372857002'>Job Application for NLP Research Intern (m/f/x) at Rasa</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rasa/jobs/4372857002'>Job Application for NLP Research Intern (m/f/x) at Rasa</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
@@ -476,7 +476,7 @@ India.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 22, 2019 ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
-<h5><a href='https://amplexor.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amplexor.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-30</p>
 <hr/>
